# rust_shell

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: bash-implementation-inventory.md  bash-source-map.md  bash-upstream-tests.md  source-layout.md
memory/: bashrs-progress.md
scripts/: run-bash-upstream-tests.sh
src/: lib.rs  main.rs
src/builtins/: alias.rs  bind.rs  break.rs  builtin.rs  caller.rs  cd.rs  colon.rs  command.rs  common.rs  complete.rs  declare.rs  echo.rs  enable.rs  eval.rs  evalfile.rs  evalstring.rs  exec.rs  exit.rs  fc.rs  fg_bg.rs  getopt.rs  getopts.rs  hash.rs  help.rs  history.rs  jobs.rs  kill.rs  let.rs  mapfile.rs  mod.rs  printf.rs  pushd.rs  pwd.rs  read.rs  reserved.rs  return.rs  set.rs  setattr.rs  shift.rs  shopt.rs  (+10 more)
src/complete/: mod.rs  pcomplete.rs  pcomplib.rs
src/executor/: command.rs  eval.rs  hash.rs  hashlib.rs  mod.rs  path.rs  redirection.rs
src/expand/: arithmetic.rs  bracecomp.rs  braces.rs  mod.rs  pathname.rs  word.rs
src/history/: bashhist.rs  mod.rs
src/input/: bashline.rs  input.rs  mod.rs  termcap.rs
src/jobs/: jobs.rs  mod.rs  nojobs.rs  siglist.rs  signals.rs  trap.rs
src/lexer/: mod.rs  syntax.rs  syntax_table.rs
src/locale/: mod.rs
src/parser/: ast.rs  copy.rs  dispose.rs  grammar.rs  make.rs  mod.rs  print.rs
src/shell/: alias.rs  error.rs  general.rs  list.rs  mailcheck.rs  mod.rs  options.rs  quit.rs  runtime.rs  unwind.rs  variables.rs  version.rs
src/sys/: compat.rs  include.rs  mod.rs  stringlib.rs
tests/: executor_tests.rs  lexer_tests.rs  parser_tests.rs
(+218 files in other folders)
